--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
             <div class="col-xs-12 col-sm-6 col-sm-offset-3 txt_work ">
                 <h2>您想说点什么吗</h2>
 
+
                 <div class="line"></div>
                 <div class="txt_sm">
                     在这里写下您想要说的，并且留下联系方式，
@@ -382,7 +383,8 @@
     </div>
 </footer>
 <div id="toUp" gd="0">
-    <i class="glyphicon glyphicon-arrow-up"></i>
+    <i class="glyphicon glyphicon-arrow-up">
+    </i>
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
