--- a/index.html
+++ b/index.html
@@ -336,8 +336,7 @@
                 <h2>您想说点什么吗</h2>
 
 
-                <div class="line"></div>
-                <div class="txt_sm">
+                <div class="line"></div>                <div class="txt_sm">
                     在这里写下您想要说的，并且留下联系方式，
                     我会第一时间回复邮件给您。期待您的光临指导....
                 </div>
