--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 
 </div>
 <!--导航-->
-<nav id="navbar-example" class="navbar navbar-default  navbar-static  color_me abc " role="navigation">
-    <div class="container">
+<nav id="navbar-example" class="navbar navbar-default  navbar-static  color_me abc " role="navigation">    <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -47,8 +46,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">ZHANG LiXin</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        </div>        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul id="scroll_down" class="nav navbar-nav navbar-right">
                 <li><a href="#floor0">首页</a></li>
                 <li><a href="#floor1">自我介绍</a></li>
@@ -64,8 +62,7 @@
 <div id="floor1" class="color_all moddle">
     <div class="container">
         <div class="row">
-            <div class="col-xs-6 col-xs-offset-3 forMe">
-                <h3 class="font_me">自我介绍</h3>
+            <div class="col-xs-6 col-xs-offset-3 forMe">                <h3 class="font_me">自我介绍</h3>
 
                 <div class="txt_sm">这里是我的个人信息，它会让您更快的了解我，并且对我有一个初步的认识。</div>
             </div>
@@ -74,15 +71,14 @@
             <div class="col-xs-12 col-sm-3">
                 <div class="thumbnail color_me box-shadow">
                     <span class="glyphicon glyphicon-education font_size"></span>
-
                     <div class="caption txt">
                         <h4 class="font_me">我的学历</h4>
 
-                        <p class="p_up"><b>毕业院校:</b> 齐齐哈尔大学</p>
+                        <p class="p_up"><b>毕业院校:</b> 大学</p>
 
                         <p class="p_up"><b>毕业时间:</b> 2006年6月</p>
 
-                        <p class="p_up"><b>学历:</b> 大专(统招)</p>
+                        <p class="p_up"><b>学历:</b> 大(统招)</p>
                     </div>
                 </div>
             </div>
@@ -93,11 +89,11 @@
                     <div class="caption txt">
                         <h4 class="font_me">我的年龄</h4>
 
-                        <p class="p_up"><b>出生日期:</b> 1987年4月7日</p>
+                        <p class="p_up"><b>出生日期:</b> 年月日</p>
 
-                        <p class="p_up"><b>星座:</b> 金牛座</p>
+                        <p class="p_up"><b>星座:</b> 座</p>
 
-                        <p class="p_up"><b>属性:</b> 兔</p>
+                        <p class="p_up"><b>属性:</b> </p>
                     </div>
                 </div>
             </div>
@@ -108,11 +104,11 @@
                     <div class="caption txt">
                         <h4 class="font_me">联系方式</h4>
 
-                        <p class="p_up"><b>手机号码:</b> 15846081521</p>
+                        <p class="p_up"><b>手机号码:</b> 1584521</p>
 
                         <p class="p_up"><b>邮箱:</b> 12345678@163.com</p>
 
-                        <p class="p_up"><b>微信号:</b> 15846081521</p>
+                        <p class="p_up"><b>微信号:</b> 1584521</p>
                     </div>
                 </div>
             </div>
@@ -123,9 +119,9 @@
                     <div class="caption txt">
                         <h4 class="font_me">我的住址</h4>
 
-                        <p class="p_up"><b>现居住地:</b> 北京市朝阳双井</p>
+                        <p class="p_up"><b>现居住地:</b> 北京市</p>
 
-                        <p class="p_up"><b>家庭地址:</b> 哈尔滨市</p>
+                        <p class="p_up"><b>家庭地址:</b> 市</p>
 
                         <p class="p_up"><b>现居住地:</b> 可随工作调整</p>
                     </div>
